--- a/Attendance.html
+++ b/Attendance.html
@@ -709,7 +709,7 @@
 
             // Remove last separator and add footer
             messageChunks.pop();
-            messageChunks.push(`\n_Sent via Islamic Tracker App_`);
+            messageChunks.push(`\n_Sent via Attendance App_`);
 
             const text = messageChunks.join('\n');
             const encoded = encodeURIComponent(text);
