--- a/Attendance.html
+++ b/Attendance.html
@@ -310,7 +310,7 @@
 
     <div class="parent-container">
         <div class="header">
-            <h1>→ Today’s Islamic Activities</h1>
+            <h1>→ Today's Islamic Activities</h1>
             <p>Track daily worship and build good habits</p>
         </div>
 
